fix АІ mentor comments in the header

--- a/index.html
+++ b/index.html
@@ -18,26 +18,30 @@
   </head>
   <body>
     <header>
-      <div class="container header-section">
-        <nav>
-          <a href="/" class="logo">Web<span>Studio</span></a>
-          <ul class="header-menu">
-            <li><a href="#studio">Studio</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#contacts">Contacts</a></li>
-          </ul>
-        </nav>
-        <address class="contacts">
-          <ul>
-            <li>
-              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li>
-              <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-            </li>
-          </ul>
-        </address>
-      </div>
+      <nav>
+        <a href="/" class="logo"
+          >Web<span class="header-logo-substring">Studio</span></a
+        >
+        <ul class="menu">
+          <li><a class="menu-item" href="/">Studio</a></li>
+          <li><a class="menu-item" href="">Portfolio</a></li>
+          <li><a class="menu-item" href="">Contacts</a></li>
+        </ul>
+      </nav>
+      <address class="contacts">
+        <ul>
+          <li>
+            <a class="contacts-item" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="contacts-item" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+        </ul>
+      </address>
     </header>
 
     <main>
