--- a/index.html
+++ b/index.html
@@ -46,36 +46,39 @@
 
     <main>
       <section class="main-section">
-        <h1>Effective Solutions for Your Business</h1>
+        <h1 class="main-section-title">
+          Effective Solutions for Your Business
+        </h1>
         <button class="order-btn" type="button">Order Service</button>
       </section>
 
       <section class="features-section">
-        <ul class="container">
+        <h2>Features</h2>
+        <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="features-item-title">Strategy</h3>
+            <p class="features-item-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="features-item-title">Punctuality</h3>
+            <p class="features-item-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="features-item-title">Diligence</h3>
+            <p class="features-item-text">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="features-item-title">Technologies</h3>
+            <p class="features-item-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -84,8 +87,8 @@
       </section>
 
       <section class="team-section">
-        <h2>Our Team</h2>
-        <ul class="container">
+        <h2 class="team-section-title">Our Team</h2>
+        <ul>
           <li class="team-item">
             <img
               src="./images/team/product_designer.jpg"
@@ -93,10 +96,8 @@
               width="264"
               height="260"
             />
-            <div class="team-item-description">
-              <h3>Mark Guerrero</h3>
-              <p>Product Designer</p>
-            </div>
+            <h3 class="team-item-title">Mark Guerrero</h3>
+            <p class="team-item-text">Product Designer</p>
           </li>
           <li class="team-item">
             <img
@@ -105,10 +106,8 @@
               width="264"
               height="260"
             />
-            <div class="team-item-description">
-              <h3>Tom Ford</h3>
-              <p>Frontend Developer</p>
-            </div>
+            <h3 class="team-item-title">Tom Ford</h3>
+            <p class="team-item-text">Frontend Developer</p>
           </li>
           <li class="team-item">
             <img
@@ -117,10 +116,8 @@
               width="264"
               height="260"
             />
-            <div class="team-item-description">
-              <h3>Camila Garcia</h3>
-              <p>Marketing</p>
-            </div>
+            <h3 class="team-item-title">Camila Garcia</h3>
+            <p class="team-item-text">Marketing</p>
           </li>
           <li class="team-item">
             <img
@@ -129,17 +126,15 @@
               width="264"
               height="260"
             />
-            <div class="team-item-description">
-              <h3>Daniel Wilson</h3>
-              <p>UI Designer</p>
-            </div>
+            <h3 class="team-item-title">Daniel Wilson</h3>
+            <p class="team-item-text">UI Designer</p>
           </li>
         </ul>
       </section>
 
       <section class="portfolio-section" id="portfolio">
-        <h2>Our Portfolio</h2>
-        <ul class="container">
+        <h2 class="portfolio-section-title">Our Portfolio</h2>
+        <ul>
           <li class="portfolio-item">
             <img
               src="./images/portfolio/banking_app.jpg"
@@ -147,10 +142,8 @@
               width="360"
               height="300"
             />
-            <div class="portfolio-item-description">
-              <h3>Banking App</h3>
-              <p>App</p>
-            </div>
+            <h3 class="portfolio-item-title">Banking App</h3>
+            <p class="portfolio-item-text">App</p>
           </li>
           <li class="portfolio-item">
             <img
@@ -159,10 +152,8 @@
               width="360"
               height="300"
             />
-            <div class="portfolio-item-description">
-              <h3>Cashless Payment</h3>
-              <p>Marketing</p>
-            </div>
+            <h3 class="portfolio-item-title">Cashless Payment</h3>
+            <p class="portfolio-item-text">Marketing</p>
           </li>
           <li class="portfolio-item">
             <img
@@ -171,10 +162,8 @@
               width="360"
               height="300"
             />
-            <div class="portfolio-item-description">
-              <h3>Meditation App</h3>
-              <p>App</p>
-            </div>
+            <h3 class="portfolio-item-title">Meditation App</h3>
+            <p class="portfolio-item-text">App</p>
           </li>
           <li class="portfolio-item">
             <img
@@ -183,10 +172,8 @@
               width="360"
               height="300"
             />
-            <div class="portfolio-item-description">
-              <h3>Taxi Service</h3>
-              <p>Marketing</p>
-            </div>
+            <h3 class="portfolio-item-title">Taxi Service</h3>
+            <p class="portfolio-item-text">Marketing</p>
           </li>
           <li class="portfolio-item">
             <img
@@ -195,10 +182,8 @@
               width="360"
               height="300"
             />
-            <div class="portfolio-item-description">
-              <h3>Screen Illustrations</h3>
-              <p>Design</p>
-            </div>
+            <h3 class="portfolio-item-title">Screen Illustrations</h3>
+            <p class="portfolio-item-text">Design</p>
           </li>
           <li class="portfolio-item">
             <img
@@ -208,22 +193,22 @@
               height="300"
             />
             <div class="portfolio-item-description">
-              <h3>Online Courses</h3>
-              <p>Marketing</p>
+              <h3 class="portfolio-item-title">Online Courses</h3>
+              <p class="portfolio-item-text">Marketing</p>
             </div>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-      <div class="container">
-        <a href="/" class="logo">Web<span>Studio</span></a>
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
+    <footer class="footer">
+      <a href="/" class="logo"
+        >Web<span class="footer-logo-substring">Studio</span></a
+      >
+      <p class="footer-text">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
